--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=ForoHub
+# Configuración de la base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub
+spring.datasource.username=root
+spring.datasource.password=carroyo_1
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de JPA
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# Configuración de Flyway
+spring.flyway.enabled=true
+
+# Configuración JWT
+api.security.secret=${JWT_SECRET:mi-clave-secreta-super-segura}
+
+# Puerto del servidor
+server.port=8080
+
+# Configuración de logging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.alura.forohub=DEBUG
