--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,24 @@
 spring.application.name=ForoHub
-# Configuraci髇 de la base de datos MySQL
+# Configuraci贸n de la base de datos MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/foro_hub
-spring.datasource.username=root
-spring.datasource.password=carroyo_1
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Configuraci髇 de JPA
+# Configuraci贸n de JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
-# Configuraci髇 de Flyway
+# Configuraci贸n de Flyway
 spring.flyway.enabled=true
 
-# Configuraci髇 JWT
+# Configuraci贸n JWT
 api.security.secret=${JWT_SECRET:mi-clave-secreta-super-segura}
 
 # Puerto del servidor
 server.port=8080
 
-# Configuraci髇 de logging
+# Configuraci贸n de logging
 logging.level.org.springframework.security=DEBUG
 logging.level.com.alura.forohub=DEBUG
